zbus_macros/tests/ui/proxy/no_zvariant_type_impl.stderr
error[E0277]: the trait bound `Foo: Type` is not satisfied
   --> tests/ui/proxy/no_zvariant_type_impl.rs:8:1
    |
8   | / #[dbus_proxy(
9   | |     interface = "org.freedesktop.zbus.Test",
10  | |     default_service = "org.freedesktop.zbus",
11  | |     default_path = "/org/freedesktop/zbus/test"
12  | | )]
    | |__^ the trait `Type` is not implemented for `Foo`
    |
    = help: the following other types implement trait `Type`:
              &T
              ()
              (T0, T1)
              (T0, T1, T2)
              (T0, T1, T2, T3)
              (T0, T1, T2, T3, T4)
              (T0, T1, T2, T3, T4, T5)
              (T0, T1, T2, T3, T4, T5, T6)
            and 84 others
note: required by a bound in `Proxy::<'a>::call`
   --> $WORKSPACE/zbus/src/proxy.rs
    |
    |         B: serde::ser::Serialize + zvariant::Type,
    |                                    ^^^^^^^^^^^^^^ required by this bound in `Proxy::<'a>::call`
    = note: this error originates in the attribute macro `dbus_proxy` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo: Type` is not satisfied
   --> tests/ui/proxy/no_zvariant_type_impl.rs:8:1
    |
8   | / #[dbus_proxy(
9   | |     interface = "org.freedesktop.zbus.Test",
10  | |     default_service = "org.freedesktop.zbus",
11  | |     default_path = "/org/freedesktop/zbus/test"
12  | | )]
    | |__^ the trait `Type` is not implemented for `Foo`
    |
    = help: the following other types implement trait `Type`:
              &T
              ()
              (T0, T1)
              (T0, T1, T2)
              (T0, T1, T2, T3)
              (T0, T1, T2, T3, T4)
              (T0, T1, T2, T3, T4, T5)
              (T0, T1, T2, T3, T4, T5, T6)
            and 84 others
note: required by a bound in `Proxy::<'a>::call`
   --> $WORKSPACE/zbus/src/proxy.rs
    |
    |         R: serde::de::DeserializeOwned + zvariant::Type,
    |                                          ^^^^^^^^^^^^^^ required by this bound in `Proxy::<'a>::call`
    = note: this error originates in the attribute macro `dbus_proxy` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo: From<OwnedValue>` is not satisfied
   --> tests/ui/proxy/no_zvariant_type_impl.rs:8:1
    |
8   | / #[dbus_proxy(
9   | |     interface = "org.freedesktop.zbus.Test",
10  | |     default_service = "org.freedesktop.zbus",
11  | |     default_path = "/org/freedesktop/zbus/test"
12  | | )]
    | |__^ the trait `From<OwnedValue>` is not implemented for `Foo`
    |
    = note: required because of the requirements on the impl of `Into<Foo>` for `OwnedValue`
    = note: required because of the requirements on the impl of `TryFrom<OwnedValue>` for `Foo`
note: required by a bound in `Proxy::<'a>::get_property`
   --> $WORKSPACE/zbus/src/proxy.rs
    |
    |         T: TryFrom<OwnedValue>,
    |            ^^^^^^^^^^^^^^^^^^^ required by this bound in `Proxy::<'a>::get_property`
    = note: this error originates in the attribute macro `dbus_proxy` (in Nightly builds, run with -Z macro-backtrace for more info)
